2A/05_Projet_GL/src/test/deca/context/valid/complet/79_method_call_object_class.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

{
    A a1 ;
    A a2 ;
    a1.equals(a2);
}